<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/rectangle_image_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/light_grey"
                android:src="@drawable/rectangle"
                app:layout_constraintBottom_toBottomOf="@+id/connection_entry_2_3"
                app:layout_constraintEnd_toEndOf="@+id/connection_entry_2_5"
                app:layout_constraintStart_toStartOf="@+id/connection_entry_2_2"
                app:layout_constraintTop_toTopOf="@+id/connection_entry_2_1" />

            <TextView
                android:id="@+id/connection_entry_2_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/server_company"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/connection_entry_2_1" />

            <ImageView
                android:id="@+id/refresh_symbol_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_refresh"
                app:layout_constraintBottom_toBottomOf="@+id/datausage_text_2"
                app:layout_constraintStart_toEndOf="@+id/datausage_text_2" />

            <TextView
                android:id="@+id/text_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/datausage_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_action_data_usage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_overview" />

            <TextView
                android:id="@+id/datausage_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/data_usage"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/datausage_icon"
                app:layout_constraintStart_toEndOf="@+id/datausage_icon" />

            <TextView
                android:id="@+id/datausage_text_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/datausage_overview_text_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/datausage_label" />

            <ImageView
                android:id="@+id/connection_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_action_cloud_upload"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/datausage_text_2" />

            <TextView
                android:id="@+id/connection_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/network_connections"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/connection_icon"
                app:layout_constraintStart_toEndOf="@+id/connection_icon" />

            <TextView
                android:id="@+id/datausage_text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/datausage_overview_text_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/datausage_text_1" />

            <TextView
                android:id="@+id/datausage_text_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datausage_overview_text_3"
                app:layout_constraintBottom_toBottomOf="@+id/datausage_text_2"
                app:layout_constraintStart_toEndOf="@+id/refresh_symbol_1" />

            <TextView
                android:id="@+id/connection_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/connections_overview_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connection_label" />

            <TextView
                android:id="@+id/connection_entry_1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:text="@string/app_name_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connection_white_text" />

            <TextView
                android:id="@+id/connection_entry_1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_ip_address"
                app:layout_constraintStart_toStartOf="@+id/connection_entry_1_1"
                app:layout_constraintTop_toBottomOf="@+id/connection_entry_1_1" />

            <TextView
                android:id="@+id/connection_entry_1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_hostname"
                app:layout_constraintStart_toStartOf="@+id/connection_entry_1_2"
                app:layout_constraintTop_toBottomOf="@+id/connection_entry_1_2" />

            <TextView
                android:id="@+id/connection_entry_1_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/server_company"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/connection_entry_1_1" />

            <TextView
                android:id="@+id/connection_entry_2_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/server_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connection_entry_2_4" />

            <TextView
                android:id="@+id/connection_entry_1_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/server_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connection_entry_1_4" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/connection_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/datausage_text_2" />

            <ImageView
                android:id="@+id/rectangle_image_1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/rectangle"
                app:layout_constraintBottom_toBottomOf="@+id/connection_entry_1_3"
                app:layout_constraintEnd_toEndOf="@+id/connection_entry_1_5"
                app:layout_constraintStart_toStartOf="@+id/connection_entry_1_2"
                app:layout_constraintTop_toTopOf="@+id/connection_entry_1_1"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/connection_entry_2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:text="@string/app_name_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connection_dark_text" />

            <TextView
                android:id="@+id/connection_entry_2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_ip_address"
                app:layout_constraintStart_toStartOf="@+id/connection_entry_2_1"
                app:layout_constraintTop_toBottomOf="@+id/connection_entry_2_1" />

            <TextView
                android:id="@+id/connection_entry_2_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_hostname"
                app:layout_constraintStart_toStartOf="@+id/connection_entry_2_2"
                app:layout_constraintTop_toBottomOf="@+id/connection_entry_2_2" />

            <TextView
                android:id="@+id/connection_white_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/connection_white_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connection_text" />

            <TextView
                android:id="@+id/connection_dark_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/connection_dark_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rectangle_image_1" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>